
[tool.poetry]
name = "covid_analysis"
version = "0.1.0"
description = "A Python package for exploratory data analysis."
authors = ["Prarthana Bahuriya <pbahuriy@mail.yu.edu>"]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.21"
pandas = "^1.3"
seaborn = "^0.11"
matplotlib = "^3.4"


[tool.poetry.dev-dependencies]
pytest = "^6.2"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"covid_analysis" = ["*"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 

